# NxpCupRaspi

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  Doxyfile  README.md  config.xml  tfc-k66-test.mex
board/: clock_config.c  clock_config.h  peripherals.c  peripherals.h  pin_mux.c  pin_mux.h
lwip/enet/: enet.cpp
lwip/src/netif/ppp/: utils.c
lwip/src/netif/ppp/polarssl/: md4.c  md5.c  sha1.c
source/: GyroMagSensor.cpp  GyroMagSensor.h  main.cpp  tfc_config.h
src/: FreescaleUdpServer.cpp  FreescaleUdpServer.h  ImageType.h  ImuData.h  LineTracer.cpp  LineTracer.h  LinuxUDPServer.cpp  LinuxUDPServer.h  Logger.h  NxpCar.h  NxpCarAbstract.cpp  NxpCarAbstract.h  NxpCarFreescale.cpp  NxpCarFreescale.h  NxpCarRaspi.cpp  NxpCarRaspi.h  NxpCommunication.cpp  NxpCommunication.h  NxpCupXmlConfig.cpp  NxpCupXmlConfig.h  NxpDefines.h  NxpImage.cpp  NxpImage.h  NxpImageAbstract.cpp  NxpImageAbstract.h  NxpImageFreescale.cpp  NxpImageFreescale.h  NxpImageRaspi.cpp  NxpImageRaspi.h  NxpMath.h  NxpModeSetting.h  NxpModes.h  NxpSendFrame.h  NxpSerialPort.cpp  NxpSerialPort.h  PID.cpp  PID.h  PID_New.cpp  PID_New.h  Region.h  (+17 more)
utilities/: fsl_debug_console.h  fsl_debug_console_conf.h
